--- a/src/components/board.css
+++ b/src/components/board.css
@@ -11,3 +11,15 @@
     font-size:1.2rem;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+.delbut{
+    background-color: brown;
+    color: aliceblue;
+    border: none;
+    padding:7px;
+    border-radius: 7px;
+}
+.delbut:hover{
+    background-color: rgba(165, 42, 42, 0.378);
+    cursor: pointer;
+    
+}
